--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="display"></div>
+        <div class="inputs">
+            <div class="numbers"></div>
+            <div class="operators"></div>
+        </div>
+    </div>
 </body>
 </html>
