--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <div class="display"></div>
+        <div class="display">Welcome... to the Bobculator...</div>
         <div class="inputs">
             <div class="numbers"></div>
             <div class="operators"></div>
