--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <div class="container">
-        <div class="title">TI-24 JS Bobculator</div>
+        <div class="titleBox">
+            <div class="title">TI-24 JS Bobculator</div>
+        </div>
         <div class="display">0</div>
         <div class="inputs">
             <div class="numbers"></div>
